

add_subdirectory(elementpics)
add_subdirectory(hazardsymbols)
add_subdirectory(htmlview)
add_subdirectory(icons)
add_subdirectory(iconsets)
add_subdirectory(toolpics)
add_subdirectory(latticeicons)



########### install files ###############

install( FILES bg.jpg knowledge.xml tools.xml  DESTINATION  ${DATA_INSTALL_DIR}/kalzium/data )

